feat: expand EUR production data tracer
